@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.24
+Release: 1
 Group: System Environment/Base
 Source: ftp://jbj.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -500,6 +500,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Sun Feb 13 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-1
+- don't classify files in /dev (#146623).
+
 * Sat Feb 12 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.24
 - zlib: uniqify certain symbols to prevent name space pollution.
 - macosx: include <sys/types.h> so that python sees the u_char typedef.
